==> limengdu/STM32/黎孟度心血之作/学校飞思卡尔车超声波测距程序/User/oled.c <==
/*-------------------------------------------------------------------------------
文件名称：oled.c
文件描述：OLED显示屏相关功能函数。   
备    注：测试平台基于华南理工大学广州学院 机械工程实验中心硬件平台_V1.0 RC
维护人员：Science
邮    箱：565369157@qq.com
---------------------------------------------------------------------------------*/
#include "oled.h"
#include "stdlib.h"
#include "oledfont.h"  	 
#include "delay.h"
#include "sys.h"

// OLED的显存
// 存放格式如下.
// [0]0 1 2 3 ... 127	
// [1]0 1 2 3 ... 127	
// [2]0 1 2 3 ... 127	
// [3]0 1 2 3 ... 127	
// [4]0 1 2 3 ... 127	
// [5]0 1 2 3 ... 127	
// [6]0 1 2 3 ... 127	
// [7]0 1 2 3 ... 127 			   
u8 OLED_GRAM[128][8];	 

/*-------------------------------------------------------------------------------
函数名称：OLED_Refresh_Gram
函数描述：OLED更新函数
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Refresh_Gram(void)
{
	u8 i,n;		    
	for(i=0;i<8;i++)  
	{  
		OLED_WR_Byte(0xb0+i,OLED_CMD);    // 设置页地址（0~7）
		OLED_WR_Byte(0x00,OLED_CMD);      // 设置显示位置—列低地址
		OLED_WR_Byte(0x10,OLED_CMD);      // 设置显示位置—列高地址   
		for(n=0;n<128;n++)
		{
			OLED_WR_Byte(OLED_GRAM[n][i],OLED_DATA);
		}
	}   
}

/*-------------------------------------------------------------------------------
函数名称：OLED_WR_Byte
函数描述：OLED写入函数（向SSD1306写入一个字节）
输入参数：dat:要写入的数据/命令；cmd:数据/命令标志 0,表示命令;1,表示数据;
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
#ifdef SOFTWARE_OLED 
void OLED_WR_Byte(u8 data,u8 cmd)
{	
	u8 i;			  
	if(cmd)
	  OLED_DC_Set();
	else 
	  OLED_DC_Clr();		  

	for(i=0;i<8;i++)
	{			  
		OLED_SCLK_Clr();
		if(data&0x80)
		   OLED_SDIN_Set();
		else 
		   OLED_SDIN_Clr();
		OLED_SCLK_Set();
		data<<=1;   
	}				 		  
	//OLED_DC_Set();   	  
} 
#else
void OLED_WR_Byte(u8 data,u8 cmd)
{	  
	if(cmd)
	  OLED_DC_Set();
	else 
	  OLED_DC_Clr();		  

	while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET);
	SPI_I2S_SendData(SPI2, data);
	Delay_us(2);																																			//这个延时是必要的，在STM32f1上8M晶振，低于1us会导致显存更新出错，绘屏会花，延时最短是2us（粗略延时）
		  
	//OLED_DC_Set();   	  
} 	
#endif
/*-------------------------------------------------------------------------------
函数名称：OLED_Display_On
函数描述：OLED开启函数
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Display_On(void)
{
	OLED_WR_Byte(0X8D,OLED_CMD);  // SET DCDC命令
	OLED_WR_Byte(0X14,OLED_CMD);  // DCDC ON
	OLED_WR_Byte(0XAF,OLED_CMD);  // DISPLAY ON
}

/*-------------------------------------------------------------------------------
函数名称：OLED_Display_Off
函数描述：OLED关闭函数
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Display_Off(void)
{
	OLED_WR_Byte(0X8D,OLED_CMD);  // SET DCDC命令
	OLED_WR_Byte(0X10,OLED_CMD);  // DCDC OFF
	OLED_WR_Byte(0XAE,OLED_CMD);  // DISPLAY OFF
}		   			 

/*-------------------------------------------------------------------------------
函数名称：OLED_Clear
函数描述：OLED清屏函数 
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Clear(void)  
{  
	u8 i,n;  
	for(i=0;i<8;i++)
	{
		for(n=0;n<128;n++)
		{
			OLED_GRAM[n][i]=0X00;
		}
	}		
	OLED_Refresh_Gram();					// 更新显示
}

/*-------------------------------------------------------------------------------
函数名称：OLED画点函数
函数描述：清屏函数 
输入参数：x:0~127；y:0~63；t:1 填充 0,清空;
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_DrawPoint(u8 x,u8 y,u8 t)
{
	u8 pos,bx,temp=0;
	if(x>127||y>63)return;// 超出范围了.
	pos=7-y/8;
	bx=y%8;
	temp=1<<(7-bx);
	if(t)
	{
		OLED_GRAM[x][pos]|=temp;
	}
	else 
		OLED_GRAM[x][pos]&=~temp;	    
}
	  
/*-------------------------------------------------------------------------------
函数名称：OLED_Fill
函数描述：OLED填充函数
输入参数：x1,y1,x2,y2填充区域的对角坐标，确保x1<=x2;y1<=y2 0<=x1<=127 0<=y1<=63；dot:0,清空;1,填充	
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Fill(u8 x1,u8 y1,u8 x2,u8 y2,u8 dot)  
{  
	u8 x,y;  
	for(x=x1;x<=x2;x++)
	{
		for(y=y1;y<=y2;y++)
		{
			OLED_DrawPoint(x,y,dot);
		}
	}													    
	OLED_Refresh_Gram();																		// 更新显示
}

/*-------------------------------------------------------------------------------
函数名称：OLED_ShowChar
函数描述：OLED字符显示功能函数（在指定位置显示一个字符,包括部分字符）
输入参数：x:0~127；y:0~63；mode:0,反白显示;1,正常显示；size:选择字体 16/12 
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_ShowChar(u8 x,u8 y,u8 chr,u8 size,u8 mode)
{      			    
	u8 temp,t,t1;
	u8 y0=y;
	chr=chr-' ';																						// 得到偏移后的值				   
    for(t=0;t<size;t++)
    {   
			if(size==12)
			{
				temp=oled_asc2_1206[chr][t];  											// 调用1206字体
			}
			else 
			{
				temp=oled_asc2_1608[chr][t];		 										// 调用1608字体 
			}			
			for(t1=0;t1<8;t1++)
			{
				if(temp&0x80)OLED_DrawPoint(x,y,mode);
				else OLED_DrawPoint(x,y,!mode);
				temp<<=1;
				y++;
				if((y-y0) == size)
				{
					y=y0;
					x++;
					break;
				}
			}  	 
    }          
}

/*-------------------------------------------------------------------------------
函数名称：oled_pow
函数描述：m^n函数
输入参数：m的n次方
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
u32 oled_pow(u8 m,u8 n)
{
	u32 result=1;	 
	while(n--)
	{
		result*=m;
	}    
	return result;
}				

/*-------------------------------------------------------------------------------
函数名称：OLED_ShowNumber
函数描述：OLED数字显示函数（显示2个数字）
输入参数：x,y :起点坐标；len :数字的位数；size:字体大小；mode:模式	0,填充模式;1,叠加模式；num:数值(0~4294967295)	 	
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_ShowNumber(u8 x,u8 y,u32 num,u8 len,u8 size)
{         	
	u8 t,temp;
	u8 enshow=0;						   
	for(t=0;t<len;t++)
	{
		temp=(num/oled_pow(10,len-t-1))%10;
		if(enshow==0&&t<(len-1))
		{
			if(temp==0)
			{
				OLED_ShowChar(x+(size/2)*t,y,' ',size,1);
				continue;
			}else enshow=1; 
		 	 
		}
	 	OLED_ShowChar(x+(size/2)*t,y,temp+'0',size,1); 
	}
} 

/*-------------------------------------------------------------------------------
函数名称：OLED_ShowString
函数描述：OLED字符串显示函数
输入参数：x,y:起点坐标；*p:字符串起始地址；用16字体（8，16）
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_ShowString(u8 x,u8 y,const u8 *p)
{
#define MAX_CHAR_POSX 122
#define MAX_CHAR_POSY 58          
    while(*p!='\0')
    {       
        if(x>MAX_CHAR_POSX)
				{
					x=0;
					y+=16;
				}
        if(y>MAX_CHAR_POSY)
				{
					y=x=0;
					OLED_Clear();
				}
        OLED_ShowChar(x,y,*p,12,1);	 
        x+=8;
        p++;
    }  
}	

/*-------------------------------------------------------------------------------
函数名称：SPI_Init
函数描述：SPI初始化函数
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/	
void SPIx_Init(void)
{
#ifdef HARDWARE_OLED
	GPIO_InitTypeDef GPIO_InitStructure;
	SPI_InitTypeDef SPI_InitStructure;

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);															// 使能PB端口时钟
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);															// 使能SPI2时钟

	SPI_SSOutputCmd(SPI2, ENABLE);																										// NSS---->GPIO(LED)

	GPIO_InitStructure.GPIO_Pin = OLED_SCK_PIN | OLED_SDA_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;																		// 复用推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(OLED_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = OLED_RST_PIN | OLED_DC_PIN;  
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  																// 推挽输出														
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(OLED_PORT, &GPIO_InitStructure);

	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;								// 设置SPI全双工
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;																			// 设置 SPI 工作模式:设置为主 SPI
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;																	// 8位帧结构
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;																				// 选择了串行时钟的稳态:时钟空闲状态为低电平
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;																			// 数据捕获于第1个时钟沿
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;																					// NSS 信号由软件管理
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;								// 预分频 16  (传输速率)36MHz/16=2.25MHz
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;																// 数据传输从MSB位开始
	SPI_InitStructure.SPI_CRCPolynomial = 7;																					// CRC值计算多样式
	SPI_Init(SPI2, &SPI_InitStructure);																								// SPI2外设初始化
	
	SPI_Cmd(SPI2, ENABLE);																														// 使能SPI2
#endif
}

/*-------------------------------------------------------------------------------
函数名称：OLED_Init
函数描述：OLED初始化函数
输入参数：无
返回参数：无
备    注：无
---------------------------------------------------------------------------------*/
void OLED_Init(void)
{ 	
#ifdef SOFTWARE_OLED 
	GPIO_InitTypeDef GPIO_InitStructure;

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB ,ENABLE);															// 使能PB端口时钟
	GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_12|GPIO_Pin_13|GPIO_Pin_14|GPIO_Pin_15;  // 端口配置
	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;																  // 推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;																	// IO口速度为50MHz
	GPIO_Init(GPIOB,&GPIO_InitStructure);																							// 根据设定参数初始化GPIOB
#else
	SPIx_Init();
#endif

	OLED_RST_Clr();
	Delay_ms(100);
	
	OLED_RST_Set(); 
					  
	OLED_WR_Byte(0xAE,OLED_CMD); // 关闭显示
	OLED_WR_Byte(0xD5,OLED_CMD); // 设置时钟分频因子,震荡频率
	OLED_WR_Byte(80,OLED_CMD);   // [3:0],分频因子;[7:4],震荡频率
	OLED_WR_Byte(0xA8,OLED_CMD); // 设置驱动路数
	OLED_WR_Byte(0X3F,OLED_CMD); // 默认0X3F(1/64) 
	OLED_WR_Byte(0xD3,OLED_CMD); // 设置显示偏移
	OLED_WR_Byte(0X00,OLED_CMD); // 默认为0

	OLED_WR_Byte(0x40,OLED_CMD); // 设置显示开始行 [5:0],行数.
													    
	OLED_WR_Byte(0x8D,OLED_CMD); // 电荷泵设置
	OLED_WR_Byte(0x14,OLED_CMD); // bit2，开启/关闭
	OLED_WR_Byte(0x20,OLED_CMD); // 设置内存地址模式
	OLED_WR_Byte(0x02,OLED_CMD); // [1:0],00，列地址模式;01，行地址模式;10,页地址模式;默认10;
	OLED_WR_Byte(0xA1,OLED_CMD); // 段重定义设置,bit0:0,0->0;1,0->127;
	OLED_WR_Byte(0xC0,OLED_CMD); // 设置COM扫描方向;bit3:0,普通模式;1,重定义模式 COM[N-1]->COM0;N:驱动路数
	OLED_WR_Byte(0xDA,OLED_CMD); // 设置COM硬件引脚配置
	OLED_WR_Byte(0x12,OLED_CMD); // [5:4]配置
		 
	OLED_WR_Byte(0x81,OLED_CMD); // 对比度设置
	OLED_WR_Byte(0xEF,OLED_CMD); // 1~255;默认0X7F (亮度设置,越大越亮)
	OLED_WR_Byte(0xD9,OLED_CMD); // 设置预充电周期
	OLED_WR_Byte(0xf1,OLED_CMD); // [3:0],PHASE 1;[7:4],PHASE 2;
	OLED_WR_Byte(0xDB,OLED_CMD); // 设置VCOMH 电压倍率
	OLED_WR_Byte(0x30,OLED_CMD); // [6:4] 000,0.65*vcc;001,0.77*vcc;011,0.83*vcc;

	OLED_WR_Byte(0xA4,OLED_CMD); // 全局显示开启;bit0:1,开启;0,关闭;(白屏/黑屏)
	OLED_WR_Byte(0xA6,OLED_CMD); // 设置显示方式;bit0:1,反相显示;0,正常显示	    						   
	OLED_WR_Byte(0xAF,OLED_CMD); // 开启显示	 
	OLED_Clear();
}
